--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,23 @@
 CC=gcc
-NAMS=nams
-CFLAGS=-g -O0
-LDFLAGS=-g
+NAMS=nasm
+NFLAGS=-f elf 
+CFLAGS=-Wall -nostdlib -nostartfiles -nodefaultlibs
+LD=ld
+LDFLAGS=-T linker.ld 
 OBJS=$(SOURCES:.c=.o)
 SOURCES=$(wildcard *.c)
 HEADERS=$(wildcard *.h)
-PROGNAME=kernel.bin
+KERNEL=kernel.bin
+STAGES=stage1 stage2
+LOADER_OBJ=loader.o
+LOADER_SRC=loader.S
+PAD=pad
 
-$(PROGNAME): $(OBJS)
-	$(CC) $(LDFLAGS) $(OBJS) -o $@
+$(KERNEL): $(OBJS) $(LOADER_OBJ)
+	$(LD) $(LDFLAGS) $(OBJS) $(LOADER_OBJ) -o $@
+
+$(LOADER_OBJ): $(LOADER_SRC)
+	$(NASM) $(NFLAGS) $(LOADER_SRC) -o $@
 
 deps: $(SOURCES)
 	$(CC) $(CFLAGS) -MM $(SOURCES) > $@  
@@ -16,10 +25,13 @@ deps: $(SOURCES)
 
 clean:
 	rm -f ./*.o
-	rm -f $(PROGNAME)
+	rm -f $(KERNEL)
 
-new: clean $(PROGNAME)
+new: clean $(KERNEL)
 
-entrega: $(SOURCES) $(HEADERS) Makefile
-	tar zcvf entrega.tar.gz $(SOURCES) $(HEADERS) Makefile
+$(PAD): 
+  dd if=/dev/zero of=pad bs=1 count=750
+
+diskette: $(STAGES) $(PAD) $(KERNEL) Makefile
+  cat stage1 stage2 pad kernel.bin > diskette.img
 
