--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ _build/
 kernel/obj/
 progs/
 kernel/src/all_progs.c
-reftest/diskette.img 
+reftest/diskette.img
 deps
 user/*/deps
+user/**/*.o
 tags
