Modify Makefile to use inc/ instead of include/ for header files

--- a/user/Makefile
+++ b/user/Makefile
@@ -1,4 +1,4 @@
-INCLUDE := ../include/
+INCLUDE := ../inc/
 
 CC := gcc
 CFLAGS := -std=gnu99 -Wall -nostdlib -nostdinc -nostartfiles -nodefaultlibs -I$(INCLUDE)
