--- a/user/Makefile
+++ b/user/Makefile
@@ -1,11 +1,15 @@
-INCLUDE := ../inc/
-LIBS := ../lib/
+INCLUDE := ../stdlib/inc/
+LIBDIR := ../lib/
+STDLIBDIR := ../stdlib/
+
+LIBNAME := zafiostd
+LIBFILE := $(LIBDIR)/lib$(LIBNAME).a
 
 CC := gcc
 CFLAGS := -std=gnu99 -Wall -nostdlib -nostdinc -nostartfiles -nodefaultlibs -I$(INCLUDE)
 
 LD := ld
-LDFLAGS := --whole-archive -L$(LIBS) -lzafiostd
+LDFLAGS := --whole-archive -L$(LIBDIR) -lzafiostd
 
 PROGS_DIR := ../../progs/
 BINARY := $(shell basename `pwd`)
@@ -20,6 +24,9 @@ PROG_FILE := $(PROGS_DIR)/$(BINARY)
 
 all: $(BINARY)
 
+$(LIBDIR):
+	mkdir $(LIBDIR)
+
 deps: $(SOURCES)
 	$(CC) $(CFLAGS) -MM $(SOURCES) > $@
 
@@ -28,9 +35,13 @@ deps: $(SOURCES)
 %.o:
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(BINARY): $(OBJS)
+$(LIBFILE): build_user_libs
+
+$(BINARY): $(OBJS) $(LIBFILE)
 	$(LD) $(LDFLAGS) $(OBJS) -o $@ --entry=$(ENTRY)
         
+build_user_libs: $(LIBDIR)
+	$(MAKE) -C $(STDLIBDIR) install
 
 install: $(BINARY)
 	mkdir -p $(PROGS_DIR)
@@ -43,4 +54,4 @@ clean:
 	rm -f deps
 
 
-.PHONY: clean install all
+.PHONY: clean install all build_user_libs
